refact: move logic for checking if guest is able to comment from reservation service to host and accommodation service